--- a/package.json
+++ b/package.json
@@ -26,16 +26,15 @@
     "next-seo": "^6.1.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
-    "react-awesome-lightbox": "^1.8.1",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-images": "^1.2.0-beta.7",
     "react-photo-gallery": "^8.0.0",
     "react-player": "^2.12.0",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@types/react-modal-video": "^1.2.0"
